[package]
name = "cli"
version = "0.1.0"
authors = ["firefish"]
edition = "2018"
repository = "https://github.com/firefish111/cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.10", features = ["blocking", "json"] }